# fluid-rendering

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: milestone.md
paper/: fluid-simulation-rendering.tex  reference.bib
src/: CMakeLists.txt  main.cpp  particle.h
src/cpp/: main.cpp  main3d.cpp  particle.h  particle3d.h
src/taichi/: PBF3D.py  Position_Based_Fluid.py  main.py
